Updated Copyright info & geoip api

--- a/vault/ztlogger.ini
+++ b/vault/ztlogger.ini
@@ -32,13 +32,14 @@ whtlst_pwd = ""
 ; default: ip_origin = "REMOTE_ADDR"
 ip_origin = "REMOTE_ADDR"
 
-; *** Enable/Disable Log File Pruning ***
+; *** Enable/Disable LOG/TAB File Pruning ***
+;
 ; 0 = Disabled
 ; 1 = Enabled
 ; Default = 1
 enable_pruning = 1
 
-; Set age of files to prune
+; *** Set age of files to prune ***
 ;
 ; Default is 30 days
 prune_days = 30
